crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@148.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select to_tsvector('simple', 'x y q y') @@ '!(x <-> y)' AS \"false\";"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..66
    AExpr@7..55
      FuncCall@7..38
        Ident@7..18 "to_tsvector"
        Ascii40@18..19 "("
        AConst@19..27
          Sconst@19..27 "'simple'"
        Ascii44@27..28 ","
        Whitespace@28..29 " "
        AConst@29..38
          Sconst@29..38 "'x y q y'"
      Ascii41@38..39 ")"
      Whitespace@39..40 " "
      Op@40..42 "@@"
      Whitespace@42..43 " "
      AConst@43..55
        Sconst@43..55 "'!(x <-> y)'"
    Whitespace@55..56 " "
    As@56..58 "AS"
    Whitespace@58..59 " "
    Ident@59..66 "\"false\""
  Ascii59@66..67 ";"

