crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a:3A b:2a'::tsvector || 'ba:1234 a:1B';"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    AExpr@7..46
      TypeCast@7..28
        AConst@7..18
          Sconst@7..18 "'a:3A b:2a'"
        Typecast@18..20 "::"
        TypeName@20..28
          Ident@20..28 "tsvector"
      Whitespace@28..29 " "
      Op@29..31 "||"
      Whitespace@31..32 " "
      AConst@32..46
        Sconst@32..46 "'ba:1234 a:1B'"
  Ascii59@46..47 ";"

