crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@151.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select strip(to_tsvector('simple', 'x y q y')) @@ '!x <-> !y' AS \"false\";"
---
SelectStmt@0..73
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..72
    AExpr@7..61
      FuncCall@7..44
        StripP@7..12 "strip"
        Ascii40@12..13 "("
        FuncCall@13..44
          Ident@13..24 "to_tsvector"
          Ascii40@24..25 "("
          AConst@25..33
            Sconst@25..33 "'simple'"
          Ascii44@33..34 ","
          Whitespace@34..35 " "
          AConst@35..44
            Sconst@35..44 "'x y q y'"
      Ascii41@44..45 ")"
      Ascii41@45..46 ")"
      Whitespace@46..47 " "
      Op@47..49 "@@"
      Whitespace@49..50 " "
      AConst@50..61
        Sconst@50..61 "'!x <-> !y'"
    Whitespace@61..62 " "
    As@62..64 "AS"
    Whitespace@64..65 " "
    Ident@65..72 "\"false\""
  Ascii59@72..73 ";"

